js262/test/language/module-code/parse-err-decl-pos-export-generator-decl.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

function* g() { export default null; }
